--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "NODE_ENV=dev node app.js",
     "powershell_debug": "@powershell -Command $env:DEBUG='server:*';$env:NODE_ENV='test';node app.js",
-    "powershell_dev": "@powershell -Command $env:DEBUG='disable';$env:NODE_ENV='test';node app.js",
-    "powershell_test": "@powershell -Command $env:NODE_ENV='dev';node ./test/index.js",
-    "gen": "thrift --gen js:node -o ./lib ./thrift/main.thrift"
+    "powershell_dev": "@powershell -Command $env:DEBUG='disable';$env:NODE_ENV='dev';npm run gen;node app.js",
+    "powershell_test": "@powershell -Command $env:NODE_ENV='test';node ./test/index.js",
+    "gen": "thrift --gen js:node -o ./lib ./thrift/main.thrift",
+    "eslint": "./node_modules/.bin/eslint ./"
   },
   "author": "",
   "license": "ISC",
@@ -20,5 +21,9 @@
     "config": "^1.30.0",
     "debug": "^3.1.0",
     "thrift": "^0.11.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.6.1",
+    "eslint-config-google": "^0.10.0"
   }
 }
